// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListElement should render a Link an match snapshot 1`] = `
<ListElement__Link
  to="/augsburg/en/events/first_event"
>
  <ListElement__Thumbnail
    src="thumbnail"
  />
  <ListElement__Description>
    <ListElement__Title>
      first Event
    </ListElement__Title>
  </ListElement__Description>
</ListElement__Link>
`;

exports[`ListElement should render an Anchor an match snapshot 1`] = `
<ListElement__Anchor
  href="/augsburg/en/events/first_event"
>
  <ListElement__Thumbnail
    src="thumbnail"
  />
  <ListElement__Description>
    <ListElement__Title>
      first Event
    </ListElement__Title>
  </ListElement__Description>
</ListElement__Anchor>
`;
